--- a/Hybrid_Search_Workshop.ipynb
+++ b/Hybrid_Search_Workshop.ipynb
@@ -96,10 +96,10 @@
       ],
       "metadata": {
         "id": "a453vmErPEe2",
-        "outputId": "966597e6-179c-416c-9f12-f0fe3c99b0ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "966597e6-179c-416c-9f12-f0fe3c99b0ae"
       },
       "execution_count": 3,
       "outputs": [
@@ -165,10 +165,10 @@
       ],
       "metadata": {
         "id": "BmPFfIz4WOxQ",
-        "outputId": "d1da80db-ec61-4b49-b286-01b901d505a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d1da80db-ec61-4b49-b286-01b901d505a3"
       },
       "execution_count": 4,
       "outputs": [
@@ -184,15 +184,15 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install mixedbread-ai # Update to the latest package"
+        "!pip install mixedbread-ai"
       ],
       "metadata": {
         "collapsed": true,
-        "id": "tc5kSJjLfASB",
-        "outputId": "51ef16f9-3204-4437-e60e-ba65d4717cf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tc5kSJjLfASB",
+        "outputId": "51ef16f9-3204-4437-e60e-ba65d4717cf2"
       },
       "execution_count": 12,
       "outputs": [
@@ -224,11 +224,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "VIijGJpLgUcK",
-        "outputId": "c14756bb-bfa6-490e-b219-a6dc31fb18ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VIijGJpLgUcK",
+        "outputId": "c14756bb-bfa6-490e-b219-a6dc31fb18ba"
       },
       "execution_count": 15,
       "outputs": [
@@ -281,11 +281,11 @@
         "from sentence_transformers.util import cos_sim\n"
       ],
       "metadata": {
-        "id": "_QzlDmgVe7Au",
-        "outputId": "e6047deb-90a2-4576-9c76-c27492c4ba0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_QzlDmgVe7Au",
+        "outputId": "e6047deb-90a2-4576-9c76-c27492c4ba0e"
       },
       "execution_count": 16,
       "outputs": [
@@ -386,11 +386,11 @@
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
-        "id": "U7l1X0CbnU19",
-        "outputId": "0ea992ba-e225-46b7-cd43-a76f5cdc3719",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U7l1X0CbnU19",
+        "outputId": "0ea992ba-e225-46b7-cd43-a76f5cdc3719"
       },
       "execution_count": 45,
       "outputs": [
@@ -2342,11 +2342,11 @@
         "  print(text)"
       ],
       "metadata": {
-        "id": "U5dQ8dkUqscs",
-        "outputId": "cb643dfe-7f0f-4844-a898-6f504f0157b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U5dQ8dkUqscs",
+        "outputId": "cb643dfe-7f0f-4844-a898-6f504f0157b7"
       },
       "execution_count": 49,
       "outputs": [
@@ -2369,11 +2369,11 @@
         "  pinecone-client==3.1.0"
       ],
       "metadata": {
-        "id": "KFOyq996uI9l",
-        "outputId": "d109a632-277d-4fb8-db9e-e895dd61f497",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KFOyq996uI9l",
+        "outputId": "d109a632-277d-4fb8-db9e-e895dd61f497"
       },
       "execution_count": 51,
       "outputs": [
@@ -2406,11 +2406,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "OoYzqSLkuJL7",
-        "outputId": "cc73221f-979b-480b-f40b-a84186eb9e95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OoYzqSLkuJL7",
+        "outputId": "cc73221f-979b-480b-f40b-a84186eb9e95"
       },
       "execution_count": 53,
       "outputs": [
@@ -2557,11 +2557,11 @@
         "print(\"Embeddings upserted to Pinecone successfully!\")"
       ],
       "metadata": {
-        "id": "OHV-VQJOuJY1",
-        "outputId": "1cda2d62-6777-4305-ed9e-79d6fd4b0992",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OHV-VQJOuJY1",
+        "outputId": "1cda2d62-6777-4305-ed9e-79d6fd4b0992"
       },
       "execution_count": 69,
       "outputs": [
@@ -2605,11 +2605,11 @@
         "    print(f\"ID: {match.id}, Score: {match.score}, Text: {match.metadata['text']}\")"
       ],
       "metadata": {
-        "id": "FJURMs6QuJe1",
-        "outputId": "dbf3ad15-1b9a-4786-940f-dfb673b7a858",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FJURMs6QuJe1",
+        "outputId": "dbf3ad15-1b9a-4786-940f-dfb673b7a858"
       },
       "execution_count": 74,
       "outputs": [
@@ -2852,11 +2852,11 @@
       ],
       "metadata": {
         "id": "n-JOTMv_UFa4",
-        "outputId": "9841471e-a198-4fc7-a0b2-029f7b4c8133",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "9841471e-a198-4fc7-a0b2-029f7b4c8133"
       },
       "execution_count": 48,
       "outputs": [
